src/parser.automaton
State 0:
program' -> . program [ # ]
-- On stmts shift to state 1
-- On program shift to state 124
-- On WHILE reduce production stmts -> 
-- On TRUE reduce production stmts -> 
-- On STRUCT reduce production stmts -> 
-- On STRINGLIT reduce production stmts -> 
-- On RETURN reduce production stmts -> 
-- On NOT reduce production stmts -> 
-- On MINUS reduce production stmts -> 
-- On LPAREN reduce production stmts -> 
-- On LBRACE reduce production stmts -> 
-- On INTLIT reduce production stmts -> 
-- On IF reduce production stmts -> 
-- On ID reduce production stmts -> 
-- On GLOBAL reduce production stmts -> 
-- On FOR reduce production stmts -> 
-- On FLOATLIT reduce production stmts -> 
-- On FALSE reduce production stmts -> 
-- On EOF reduce production stmts -> 
-- On DEF reduce production stmts -> 

State 1:
program -> stmts . EOF [ # ]
stmts -> stmts . stmt [ WHILE TRUE STRUCT STRINGLIT RETURN NOT MINUS LPAREN LBRACE INTLIT IF ID GLOBAL FOR FLOATLIT FALSE EOF DEF ]
-- On WHILE shift to state 2
-- On TRUE shift to state 4
-- On STRUCT shift to state 60
-- On STRINGLIT shift to state 7
-- On RETURN shift to state 82
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On LBRACE shift to state 87
-- On INTLIT shift to state 11
-- On IF shift to state 90
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FOR shift to state 94
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On EOF shift to state 123
-- On DEF shift to state 102
-- On stmt shift to state 111
-- On expr shift to state 105

State 2:
stmt -> WHILE . LPAREN expr RPAREN stmt [ WHILE TRUE STRUCT STRINGLIT RETURN RBRACE NOT MINUS LPAREN LBRACE INTLIT IF ID GLOBAL FOR FLOATLIT FALSE EOF ELSE DEF ]
-- On LPAREN shift to state 3

State 3:
stmt -> WHILE LPAREN . expr RPAREN stmt [ WHILE TRUE STRUCT STRINGLIT RETURN RBRACE NOT MINUS LPAREN LBRACE INTLIT IF ID GLOBAL FOR FLOATLIT FALSE EOF ELSE DEF ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 58

State 4:
expr -> TRUE . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> TRUE 
-- On SEMI reduce production expr -> TRUE 
-- On RPAREN reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LEQ reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GEQ reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On DOT reduce production expr -> TRUE 
-- On DIVIDE reduce production expr -> TRUE 
-- On COMMA reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 5:
expr -> STRUCT . ID [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On ID shift to state 6

State 6:
expr -> STRUCT ID . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> STRUCT ID 
-- On SEMI reduce production expr -> STRUCT ID 
-- On RPAREN reduce production expr -> STRUCT ID 
-- On PLUS reduce production expr -> STRUCT ID 
-- On OR reduce production expr -> STRUCT ID 
-- On NEQ reduce production expr -> STRUCT ID 
-- On MINUS reduce production expr -> STRUCT ID 
-- On LT reduce production expr -> STRUCT ID 
-- On LEQ reduce production expr -> STRUCT ID 
-- On GT reduce production expr -> STRUCT ID 
-- On GEQ reduce production expr -> STRUCT ID 
-- On EQ reduce production expr -> STRUCT ID 
-- On DOT reduce production expr -> STRUCT ID 
-- On DIVIDE reduce production expr -> STRUCT ID 
-- On COMMA reduce production expr -> STRUCT ID 
-- On AND reduce production expr -> STRUCT ID 

State 7:
expr -> STRINGLIT . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> STRINGLIT 
-- On SEMI reduce production expr -> STRINGLIT 
-- On RPAREN reduce production expr -> STRINGLIT 
-- On PLUS reduce production expr -> STRINGLIT 
-- On OR reduce production expr -> STRINGLIT 
-- On NEQ reduce production expr -> STRINGLIT 
-- On MINUS reduce production expr -> STRINGLIT 
-- On LT reduce production expr -> STRINGLIT 
-- On LEQ reduce production expr -> STRINGLIT 
-- On GT reduce production expr -> STRINGLIT 
-- On GEQ reduce production expr -> STRINGLIT 
-- On EQ reduce production expr -> STRINGLIT 
-- On DOT reduce production expr -> STRINGLIT 
-- On DIVIDE reduce production expr -> STRINGLIT 
-- On COMMA reduce production expr -> STRINGLIT 
-- On AND reduce production expr -> STRINGLIT 

State 8:
expr -> NOT . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 57

State 9:
expr -> MINUS . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 56

State 10:
expr -> LPAREN . expr RPAREN [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 54

State 11:
expr -> INTLIT . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> INTLIT 
-- On SEMI reduce production expr -> INTLIT 
-- On RPAREN reduce production expr -> INTLIT 
-- On PLUS reduce production expr -> INTLIT 
-- On OR reduce production expr -> INTLIT 
-- On NEQ reduce production expr -> INTLIT 
-- On MINUS reduce production expr -> INTLIT 
-- On LT reduce production expr -> INTLIT 
-- On LEQ reduce production expr -> INTLIT 
-- On GT reduce production expr -> INTLIT 
-- On GEQ reduce production expr -> INTLIT 
-- On EQ reduce production expr -> INTLIT 
-- On DOT reduce production expr -> INTLIT 
-- On DIVIDE reduce production expr -> INTLIT 
-- On COMMA reduce production expr -> INTLIT 
-- On AND reduce production expr -> INTLIT 

State 12:
expr -> ID . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> ID . ASSIGN expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> ID . LPAREN actuals_opt RPAREN [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On LPAREN shift to state 13
-- On ASSIGN shift to state 52
-- On TIMES reduce production expr -> ID 
-- On SEMI reduce production expr -> ID 
-- On RPAREN reduce production expr -> ID 
-- On PLUS reduce production expr -> ID 
-- On OR reduce production expr -> ID 
-- On NEQ reduce production expr -> ID 
-- On MINUS reduce production expr -> ID 
-- On LT reduce production expr -> ID 
-- On LEQ reduce production expr -> ID 
-- On GT reduce production expr -> ID 
-- On GEQ reduce production expr -> ID 
-- On EQ reduce production expr -> ID 
-- On DOT reduce production expr -> ID 
-- On DIVIDE reduce production expr -> ID 
-- On COMMA reduce production expr -> ID 
-- On AND reduce production expr -> ID 

State 13:
expr -> ID LPAREN . actuals_opt RPAREN [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 46
-- On actuals_opt shift to state 47
-- On actuals_list shift to state 49
-- On RPAREN reduce production actuals_opt -> 

State 14:
expr -> GLOBAL . ID ASSIGN expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On ID shift to state 15

State 15:
expr -> GLOBAL ID . ASSIGN expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On ASSIGN shift to state 16

State 16:
expr -> GLOBAL ID ASSIGN . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 19

State 17:
expr -> FLOATLIT . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> FLOATLIT 
-- On SEMI reduce production expr -> FLOATLIT 
-- On RPAREN reduce production expr -> FLOATLIT 
-- On PLUS reduce production expr -> FLOATLIT 
-- On OR reduce production expr -> FLOATLIT 
-- On NEQ reduce production expr -> FLOATLIT 
-- On MINUS reduce production expr -> FLOATLIT 
-- On LT reduce production expr -> FLOATLIT 
-- On LEQ reduce production expr -> FLOATLIT 
-- On GT reduce production expr -> FLOATLIT 
-- On GEQ reduce production expr -> FLOATLIT 
-- On EQ reduce production expr -> FLOATLIT 
-- On DOT reduce production expr -> FLOATLIT 
-- On DIVIDE reduce production expr -> FLOATLIT 
-- On COMMA reduce production expr -> FLOATLIT 
-- On AND reduce production expr -> FLOATLIT 

State 18:
expr -> FALSE . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES reduce production expr -> FALSE 
-- On SEMI reduce production expr -> FALSE 
-- On RPAREN reduce production expr -> FALSE 
-- On PLUS reduce production expr -> FALSE 
-- On OR reduce production expr -> FALSE 
-- On NEQ reduce production expr -> FALSE 
-- On MINUS reduce production expr -> FALSE 
-- On LT reduce production expr -> FALSE 
-- On LEQ reduce production expr -> FALSE 
-- On GT reduce production expr -> FALSE 
-- On GEQ reduce production expr -> FALSE 
-- On EQ reduce production expr -> FALSE 
-- On DOT reduce production expr -> FALSE 
-- On DIVIDE reduce production expr -> FALSE 
-- On COMMA reduce production expr -> FALSE 
-- On AND reduce production expr -> FALSE 

State 19:
expr -> expr . PLUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . MINUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . TIMES expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . EQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . NEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . AND expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . OR expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DOT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> GLOBAL ID ASSIGN expr . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TIMES shift to state 20
-- On PLUS shift to state 24
-- On OR shift to state 28
-- On NEQ shift to state 30
-- On MINUS shift to state 32
-- On LT shift to state 34
-- On LEQ shift to state 36
-- On GT shift to state 38
-- On GEQ shift to state 40
-- On EQ shift to state 42
-- On DOT shift to state 22
-- On DIVIDE shift to state 26
-- On AND shift to state 44
-- On SEMI reduce production expr -> GLOBAL ID ASSIGN expr 
-- On RPAREN reduce production expr -> GLOBAL ID ASSIGN expr 
-- On COMMA reduce production expr -> GLOBAL ID ASSIGN expr 

State 20:
expr -> expr TIMES . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 21

State 21:
expr -> expr . PLUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . MINUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . TIMES expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr TIMES expr . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . EQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . NEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . AND expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . OR expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DOT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On DOT shift to state 22
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SEMI reduce production expr -> expr TIMES expr 
-- On RPAREN reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On DIVIDE reduce production expr -> expr TIMES expr 
-- On COMMA reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 22:
expr -> expr DOT . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 23

State 23:
expr -> expr . PLUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . MINUS expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . TIMES expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . EQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . NEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . LEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . GEQ expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . AND expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . OR expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr . DOT expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
expr -> expr DOT expr . [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On DOT shift to state 22
-- On TIMES reduce production expr -> expr DOT expr 
-- On SEMI reduce production expr -> expr DOT expr 
-- On RPAREN reduce production expr -> expr DOT expr 
-- On PLUS reduce production expr -> expr DOT expr 
-- On OR reduce production expr -> expr DOT expr 
-- On NEQ reduce production expr -> expr DOT expr 
-- On MINUS reduce production expr -> expr DOT expr 
-- On LT reduce production expr -> expr DOT expr 
-- On LEQ reduce production expr -> expr DOT expr 
-- On GT reduce production expr -> expr DOT expr 
-- On GEQ reduce production expr -> expr DOT expr 
-- On EQ reduce production expr -> expr DOT expr 
-- On DIVIDE reduce production expr -> expr DOT expr 
-- On COMMA reduce production expr -> expr DOT expr 
-- On AND reduce production expr -> expr DOT expr 

State 24:
expr -> expr PLUS . expr [ TIMES SEMI RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DOT DIVIDE COMMA AND ]
-- On TRUE shift to state 4
-- On STRUCT shift to state 5
-- On STRINGLIT shift to state 7
-- On NOT shift to state 8
-- On MINUS shift to state 9
-- On LPAREN shift to state 10
-- On INTLIT shift to state 11
-- On ID shift to state 12
-- On GLOBAL shift to state 14
-- On FLOATLIT shift to state 17
-- On FALSE shift to state 18
-- On expr shift to state 25
